[package]
edition = "2021"
name = "skeleton"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "skeleton"

[dependencies]
log = "0.4"

necronomicon = { git = "https://github.com/nyanzoo/necronomicon", branch = "develop" }
# necronomicon = { path = "../necronomicon" }

[dev-dependencies]
necronomicon = { git = "https://github.com/nyanzoo/necronomicon", branch = "develop", features = [
    "test",
] }
